# PhiloAgents-AI-Agent-Simulation-Engine

./: .env  pyproject.toml  setup.ps1  setup.sh
Documents/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_SUMMARY.md  QUICK_REFERENCE.md  README_CHATBOT.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  VALIDATION_CHECKLIST.md
data/: Users.json
src/chatbot/: __init__.py  config.py  main.py
src/chatbot/application/: agent_init_.py  evaluation_init_.py  generate_response.py  rag_init_.py  workflow_init_.py
src/chatbot/application/agent/: config.py  factory.py  loader.py
src/chatbot/application/conversation_service/: generate_response.py
src/chatbot/application/conversation_service/workflow/: edges.py  tools.py
src/chatbot/application/data/: Company.json
src/chatbot/application/evaluation/: evaluator.py
src/chatbot/application/rag/: pipeline.py  retrievers.py
src/chatbot/application/workflow/: graph.py  nodes.py  state.py
src/chatbot/domain/: HVACAssistant.py  __init__.py  agent.py  agent_factory.py  conversation.py  exceptions.py  prompts.py
src/chatbot/infrastructure/: __init__.py  api.py
src/chatbot/infrastructure/routes/: __init__.py  chat.py
